--- a/player.html
+++ b/player.html
@@ -19,6 +19,7 @@
     <meta http-equiv="Cache-Control" content="no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4880702115264179"  crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="player-header-fixed p-4 flex items-center border-b border-[#333] gap-2">
