--- a/watch.html
+++ b/watch.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/watch.css">
     <script src="js/watch.js"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4880702115264179"  crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="redirect-container">
