--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 	<!-- Favicon -->
     <link rel="icon" href="image/logo.png">
     <link rel="apple-touch-icon" href="image/logo-black.png">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4880702115264179"  crossorigin="anonymous"></script>
 </head>
 <body class="page-bg text-white flex flex-col min-h-screen">
 	<header class="border-b border-[#333] bg-[#0a0a0a] p-4">
