--- a/watch.html
+++ b/watch.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/watch.css">
     <script src="js/watch.js"></script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4880702115264179"  crossorigin="anonymous"></script>
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?894b951cf52ffc14e5ca9eca917f8530";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body>
     <div class="redirect-container">
