--- a/about.html
+++ b/about.html
@@ -12,6 +12,16 @@
     <link rel="icon" href="image/logo.png">
     <link rel="apple-touch-icon" href="image/logo-black.png">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4880702115264179"  crossorigin="anonymous"></script>
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?894b951cf52ffc14e5ca9eca917f8530";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body class="page-bg text-white flex flex-col min-h-screen">
 	<header class="border-b border-[#333] bg-[#0a0a0a] p-4">
